--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,6 +1,8 @@
-#navbar {
+nav {
     --animation-speed : 0.7s;
+}
 
+#navbar {
     transition: var(--animation-speed);
     height: var(--navbar-height);
     background-color: var(--navbar-bg);
@@ -60,13 +62,17 @@
 
 #return-nav {
     transition: var(--animation-speed);
-    position: absolute;
+    position: fixed;
     border-radius: 5px;
     background-color: var(--navbar-bg);
     width: 50px;
     height: 50px;
     user-select: none;
     box-shadow: -1px 1px 3px 0px black;
+    right: 30px;
+    bottom: 30px;
+    z-index: 1;
+    color: white;
 }
 
 #return-nav a {
